    - Updated IFactoryProvider and factory to use categories better.
    - ActivityPolicyFilter::setActiveSubject(s) functions changed to return bool indicating if the new selection was accepted by the filter according to its policies.

    ============================
    QtilitiesCoreGui:
    ============================
    - CLOSED #29: ObserverWidget deleteAll() and detachAll() actions should use better text.
    - CLOSED #31: ObserverWidget deleteItem() and detachItem() actions should use better text.
    - FIXED #34: Fixed bug in DynamicSideWidgetWrapper where it did not respect manageWidgets() properly.
    - Fixed wrong error debug message in SideWidgetFileSystem.
    - Fixed documentation on NamingPolicyFilter::ValidationCheck
    - Improved usage of CodeEditorWidget when viewing file logger engines in the LoggerConfigWidget.
    - Fixed ObserverWidget not remembering its expansion state in some cases.
    - ObserverWidget will now remember category selections when rebuilding tree views.
    - ObserverWidget got new setDragDropCopyButton() and setDragDropMoveButton() functions.
    - TreeNode::enableCategorizedDisplay got new CategoryEditingFlags property.
    - The LoggerConfigWidget now allows sorting of engines.
    - TaskManagerGui now allows different ways of initializing task logger engines.
    - ObserverWidget new functions: selectedObjectsContextMatch() and selectedObjectsHintsMatch()
    - ObserverWidget can now be used under the name TreeWidget as well.
    - IExportable::ExportResultFlags added. Return values on export and import functions are now using these flags. A search and replace for IExportable::Result with IExportable::ExportResultFlags will fix any compile time errors.
    - IActionProvider and ActionProvider implementation's find action functions improved to use Qt::MatchFlags and to return a list of all found actions.
    - QtilitiesMainWindow makes available the QLabel used to display priority messages.